--- a/Simon_Áron_GA_bev_algoritmusok_colab_1_projekt.ipynb
+++ b/Simon_Áron_GA_bev_algoritmusok_colab_1_projekt.ipynb
@@ -314,8 +314,8 @@
         "      continue # already specified all bits\n",
         "\n",
         "    schema_flipped = flip_zeros_to_ones(schema)\n",
-        "    avg_fitness_original = avg_fitness_of_schema(fitnesses, symbols, schema)\n",
-        "    avg_fitness_flipped = avg_fitness_of_schema(fitnesses, symbols, schema_flipped)\n",
+        "    avg_fitness_original = avg_fitness_of_schema(fitnesses, ['0', '1'], schema)\n",
+        "    avg_fitness_flipped = avg_fitness_of_schema(fitnesses, ['0', '1'], schema_flipped)\n",
         "\n",
         "    if avg_fitness_flipped <= avg_fitness_original:\n",
         "      violations.append((schema, schema_flipped, avg_fitness_original, avg_fitness_flipped))\n",
@@ -332,7 +332,7 @@
         "id": "4CxPf_6iYRip"
       },
       "id": "4CxPf_6iYRip",
-      "execution_count": 43,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -384,10 +384,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cW6r5yuNsdig",
-        "outputId": "f365dcd0-70a4-478e-fa6a-8e5e81e275d9"
+        "outputId": "7cad216d-77ac-456a-dafb-a3654dd01f3a"
       },
       "id": "cW6r5yuNsdig",
-      "execution_count": 44,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,10 +679,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9c483934-68df-47aa-d1de-7889c6e5c47a"
+        "outputId": "7d3ba6a1-d4e9-4646-c7e6-2c29b7d4f3a4"
       },
       "id": "En2XFBDHQCnI",
-      "execution_count": 51,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,36 +947,36 @@
             "Globális maximum érték: 60\n",
             "Globális maximum helye(i): ['00000000']\n",
             "Találtunk ellenpéldá(kat):\n",
-            "****0000 -> ****1111 : átlag 48.641975308641975 -> 46.641975308641975\n",
-            "***10000 -> ***11111 : átlag 50.666666666666664 -> 48.666666666666664\n",
-            "**1*0000 -> **1*1111 : átlag 50.44444444444444 -> 48.44444444444444\n",
-            "**110000 -> **111111 : átlag 52.666666666666664 -> 50.666666666666664\n",
-            "*1**0000 -> *1**1111 : átlag 51.7037037037037 -> 49.7037037037037\n",
-            "*1*10000 -> *1*11111 : átlag 53.333333333333336 -> 51.333333333333336\n",
-            "*11*0000 -> *11*1111 : átlag 54.0 -> 52.0\n",
-            "*1110000 -> *1111111 : átlag 55.333333333333336 -> 53.333333333333336\n",
-            "0000**** -> 1111**** : átlag 48.641975308641975 -> 46.641975308641975\n",
-            "0000***1 -> 1111***1 : átlag 50.666666666666664 -> 48.666666666666664\n",
-            "0000**1* -> 1111**1* : átlag 50.44444444444444 -> 48.44444444444444\n",
-            "0000**11 -> 1111**11 : átlag 52.666666666666664 -> 50.666666666666664\n",
-            "0000*1** -> 1111*1** : átlag 51.7037037037037 -> 49.7037037037037\n",
-            "0000*1*1 -> 1111*1*1 : átlag 53.333333333333336 -> 51.333333333333336\n",
-            "0000*11* -> 1111*11* : átlag 54.0 -> 52.0\n",
-            "0000*111 -> 1111*111 : átlag 55.333333333333336 -> 53.333333333333336\n",
-            "00001*** -> 11111*** : átlag 51.77777777777778 -> 49.77777777777778\n",
-            "00001**1 -> 11111**1 : átlag 54.22222222222222 -> 52.22222222222222\n",
-            "00001*1* -> 11111*1* : átlag 53.77777777777778 -> 51.77777777777778\n",
-            "00001*11 -> 11111*11 : átlag 56.0 -> 54.0\n",
-            "000011** -> 111111** : átlag 55.55555555555556 -> 53.55555555555556\n",
-            "000011*1 -> 111111*1 : átlag 56.666666666666664 -> 54.666666666666664\n",
-            "0000111* -> 1111111* : átlag 57.333333333333336 -> 55.333333333333336\n",
-            "1***0000 -> 1***1111 : átlag 51.77777777777778 -> 49.77777777777778\n",
-            "1**10000 -> 1**11111 : átlag 54.22222222222222 -> 52.22222222222222\n",
-            "1*1*0000 -> 1*1*1111 : átlag 53.77777777777778 -> 51.77777777777778\n",
-            "1*110000 -> 1*111111 : átlag 56.0 -> 54.0\n",
-            "11**0000 -> 11**1111 : átlag 55.55555555555556 -> 53.55555555555556\n",
-            "11*10000 -> 11*11111 : átlag 56.666666666666664 -> 54.666666666666664\n",
-            "111*0000 -> 111*1111 : átlag 57.333333333333336 -> 55.333333333333336\n"
+            "****0000 -> ****1111 : átlag 44.375 -> 42.375\n",
+            "***10000 -> ***11111 : átlag 46.5 -> 44.5\n",
+            "**1*0000 -> **1*1111 : átlag 45.75 -> 43.75\n",
+            "**110000 -> **111111 : átlag 49.5 -> 47.5\n",
+            "*1**0000 -> *1**1111 : átlag 47.5 -> 45.5\n",
+            "*1*10000 -> *1*11111 : átlag 50.5 -> 48.5\n",
+            "*11*0000 -> *11*1111 : átlag 51.5 -> 49.5\n",
+            "*1110000 -> *1111111 : átlag 54.0 -> 52.0\n",
+            "0000**** -> 1111**** : átlag 44.375 -> 42.375\n",
+            "0000***1 -> 1111***1 : átlag 46.5 -> 44.5\n",
+            "0000**1* -> 1111**1* : átlag 45.75 -> 43.75\n",
+            "0000**11 -> 1111**11 : átlag 49.5 -> 47.5\n",
+            "0000*1** -> 1111*1** : átlag 47.5 -> 45.5\n",
+            "0000*1*1 -> 1111*1*1 : átlag 50.5 -> 48.5\n",
+            "0000*11* -> 1111*11* : átlag 51.5 -> 49.5\n",
+            "0000*111 -> 1111*111 : átlag 54.0 -> 52.0\n",
+            "00001*** -> 11111*** : átlag 47.25 -> 45.25\n",
+            "00001**1 -> 11111**1 : átlag 52.0 -> 50.0\n",
+            "00001*1* -> 11111*1* : átlag 50.5 -> 48.5\n",
+            "00001*11 -> 11111*11 : átlag 55.0 -> 53.0\n",
+            "000011** -> 111111** : átlag 54.0 -> 52.0\n",
+            "000011*1 -> 111111*1 : átlag 56.0 -> 54.0\n",
+            "0000111* -> 1111111* : átlag 57.0 -> 55.0\n",
+            "1***0000 -> 1***1111 : átlag 47.25 -> 45.25\n",
+            "1**10000 -> 1**11111 : átlag 52.0 -> 50.0\n",
+            "1*1*0000 -> 1*1*1111 : átlag 50.5 -> 48.5\n",
+            "1*110000 -> 1*111111 : átlag 55.0 -> 53.0\n",
+            "11**0000 -> 11**1111 : átlag 54.0 -> 52.0\n",
+            "11*10000 -> 11*11111 : átlag 56.0 -> 54.0\n",
+            "111*0000 -> 111*1111 : átlag 57.0 -> 55.0\n"
           ]
         }
       ]
